Fix altivec (ppc64le) with new gcc - https://jira.mongodb.org/browse/SERVER-33395

build/fedora/mongo/db/fts/fts_unicode_phrase_matcher_test
build/fedora/mongo/db/fts/unicode/byte_vector_test
build/fedora/mongo/db/fts/unicode/string_test

Tests fail otherwise